Внесены исправления в классе IfElseStatementTheme